--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5"
